plugins {
	id 'idea'
	id 'java'

	id 'org.springframework.boot' version '2.5.1'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'

	id 'com.diffplug.spotless' version '5.14.0'
	id 'com.github.ben-manes.versions' version '0.39.0'
	id 'com.google.cloud.tools.jib' version '3.1.1'
	id 'com.gorylenko.gradle-git-properties' version '2.3.1'
	id 'io.freefair.lombok' version '6.0.0-m2'
	id 'org.hidetake.swagger.generator' version '2.18.2'
}

sourceCompatibility = '11'

apply from: 'publishing.gradle'
apply from: 'spring.gradle'
apply from: 'generators.gradle'
apply from: 'tooling.gradle'

repositories {
	maven { url "https://broadinstitute.jfrog.io/broadinstitute/libs-snapshot-local/" }
	maven { url "https://broadinstitute.jfrog.io/broadinstitute/libs-release/" }
}

dependencies {
	implementation 'bio.terra:terra-common-lib:0.0.49-SNAPSHOT'
	implementation 'org.broadinstitute.dsde.workbench:sam-client_2.13:0.1-beb5b1c'

	// for testing with mock web server
	testImplementation 'com.squareup.okhttp3:okhttp:4.0.1'
	testImplementation 'com.squareup.okhttp3:mockwebserver:4.0.1'
}
